added support for both mssql and postgres and for reading/writing spatial (vector)  data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,13 +2,13 @@
 
 export(connect2Db)
 export(dbInsertData)
+export(dbInsertDataMssql)
 export(dbInsertDataPostgres)
-export(dbInsertDataSqlServer)
 export(dbInsertSpatial)
 export(dbReadSpatial)
 export(dbUpsertData)
+export(dbUpsertDataMssql)
 export(dbUpsertDataPostgres)
-export(dbUpsertDataSqlServer)
 export(qualifyTableMs)
 export(qualifyTablePg)
 export(quoteIdentMs)
